[package]
name = "demo_vk"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[build-dependencies]
anyhow = "1.0.93"
glob = "0.3.1"

[dependencies]
anyhow = "1.0.93"
ash = "0.38.0"
log = "0.4.22"
regex = "1.11.1"
flexi_logger = { version = "0.29.6", features = ["async"] }
indoc = "2.0.5"
clap = { version="4.5.21", features = ["derive", "wrap_help"]}
notify-debouncer-full = "0.4.0"
spin_sleep_util = "0.1.1"
nalgebra = "0.33.2"
bon = "3.0.0"
image = "0.25.5"
ctrlc = "3.4.5"
argfile = "0.2.1"
glfw = { version="0.58.0", features = ["vulkan"] }
textwrap = { version = "0.16.1", features = ["terminal_size"] }

