[package]
name = "demo_vk"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[build-dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
shader_compiler = { path = "shader_compiler" }

[dependencies]
shader_compiler = { path = "shader_compiler" }
anyhow = "1.0.100"
ash = "0.38.0"
log = "0.4.28"
regex = "1.12.2"
flexi_logger = { version = "0.29.8", features = ["async"] }
indoc = "2.0.7"
clap = { version="4.5.50", features = ["derive", "wrap_help"]}
notify-debouncer-full = "0.4.0"
spin_sleep_util = "0.1.1"
nalgebra = "0.33.2"
bon = "3.8.1"
image = "0.25.8"
ctrlc = "3.5.0"
argfile = "0.2.1"
glfw = { version="0.58.0", features = ["vulkan"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }

