[package]
name = "demo_vk"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["shader_compiler"]

[profile.dev]
opt-level = 1

[build-dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
shader_compiler = { path = "shader_compiler" }

[dependencies]
shader_compiler = { path = "shader_compiler" }
anyhow = "1.0.100"
ash = "0.38.0"
log = "0.4.28"
regex = "1.12.2"
flexi_logger = { version = "0.31.7", features = ["async"] }
indoc = "2.0.7"
clap = { version="4.5.53", features = ["derive", "wrap_help"]}
notify-debouncer-full = "0.6.0"
spin_sleep_util = "0.1.1"
nalgebra = "0.34.1"
bon = "3.8.1"
image = "0.25.9"
ctrlc = "3.5.1"
argfile = "0.2.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
glfw = { version="0.60.0", features = ["vulkan", "static-link"] }

[target.'cfg(linux)'.dependencies]
glfw = { version="0.60.0", features = ["vulkan", "static-link", "src-build"] }
